--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -12,14 +12,40 @@
 </head>
 
 <body>
+    <div class="header">
+        <img id="nbalogo" src="images/nbalogo.png">
+        <h1>2017 - 2018 NBA Stats</h1>
+    </div>
     <div class="container">
-        <div class="header">
-            <img id="nbalogo" src="images/nbalogo.png">
-            <h1>2017 - 2018 NBA Stats</h1>
-
+        <div class="west">
+            <button class="teams">Western</button>
+            <div id="westTeams">
+                <ul>
+                    <li>Dallas Mavericks</li>
+                    <li>Denver Nuggets</li>
+                    <li>Golden State Warriors</li>
+                    <li>Houston Rockets</li>
+                    <li>Los Angeles Clippers</li>
+                    <li>Lost Angeles Lakers</li>
+                    <li>Memphis Grizzlies</li>
+                    <li>New Orleans Pelicans</li>
+                    <li>Oklahoma City Thunder</li>
+                    <li>Phoenix Suns</li>
+                    <li>Portland Trial Blazers</li>
+                    <li>Sacramento Kings</li>
+                    <li>San Antonio Spurs</li>
+                    <li>Utah Jazz</li>
+                </ul>
+            </div>
+        
         </div>
+        <div class="east">
+            <h2>Eastern Conference</h2>
+        </div>
+
     </div>
     </div>
+    <script src="scripts/collapsable.js"></script>
 </body>
 
 </html>
