eastern teams set up

--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -28,6 +28,7 @@
                     <li>Los Angeles Clippers</li>
                     <li>Lost Angeles Lakers</li>
                     <li>Memphis Grizzlies</li>
+                    <li>Minnesota Timberwolves</li>
                     <li>New Orleans Pelicans</li>
                     <li>Oklahoma City Thunder</li>
                     <li>Phoenix Suns</li>
@@ -40,7 +41,26 @@
         
         </div>
         <div class="east">
-            <h2>Eastern Conference</h2>
+                <button class="teams">Eastern</button>
+                <div id="eastTeams">
+                    <ul>
+                        <li>Atlanta Hawks</li>
+                        <li>Boston Celtics</li>
+                        <li>Brooklyn Nets</li>
+                        <li>Charlotte Hornets</li>
+                        <li>Chicago Bulls</li>
+                        <li>Cleveland Cavaliers</li>
+                        <li>Detroit Pistons</li>
+                        <li>Indiana Pacers</li>
+                        <li>Miami Heat</li>
+                        <li>Milwaukee Bucks</li>
+                        <li>New York Knicks</li>
+                        <li>Orlando Magic</li>
+                        <li>Philadelphia 76ers</li>
+                        <li>Toronto Raptors</li>
+                        <li>Washington Wizards</li>
+                    </ul>
+                </div>
         </div>
 
     </div>
