--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -8,13 +8,13 @@
     <title>Team Selection</title>
     <meta name="team selection page" content="Select a team to see their stats">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Markazi+Text%7cOverpass:900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker%7cMarkazi+Text%7cOverpass:900i" rel="stylesheet">
 </head>
 
 <body>
     <div class="header">
         <img id="nbalogo" src="images/nbalogo.png">
-        <h1>2017 - 2018 NBA Stats</h1>
+        <h1>2018 - 2019 NBA Stats</h1>
     </div>
     <div class="container">
         <div class="west">
