Eastern Confernce Cards

--- a/finalproject/eastern.html
+++ b/finalproject/eastern.html
@@ -55,9 +55,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(3)">
-                <div class="front rocketsfront">
-                    <h2>Houston Rockets</h2>
-                    <img class="icons" src="images/rocketsicon.png">
+                <div class="front hornetsfront">
+                    <h2>Charlotte Hornets</h2>
+                    <img class="icons" src="images/hornetsicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -66,9 +66,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(4)">
-                <div class="front clippersfront">
-                    <h2>Los Angeles Clippers</h2>
-                    <img class="icons" src="images/clippersicon.png">
+                <div class="front bullsfront">
+                    <h2>Chicago Bulls</h2>
+                    <img class="icons" src="images/bullsicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -77,9 +77,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(5)">
-                <div class="front lakersfront">
-                    <h2>Los Angeles Lakers</h2>
-                    <img class="icons" src="images/lakersicon.png">
+                <div class="front cavsfront">
+                    <h2>Cleveland Cavaliers</h2>
+                    <img class="icons" src="images/cavsicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -88,9 +88,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(6)">
-                <div class="front memphisfront">
-                    <h2>Memphis Grizzlies</h2>
-                    <img class="icons" src="images/grizzliesicon.png">
+                <div class="front pistonsfront">
+                    <h2>Detroit Pistons</h2>
+                    <img class="icons" src="images/pistonsicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -99,9 +99,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(7)">
-                <div class="front timberfront">
-                    <h2>Minnesota Timberwolves</h2>
-                    <img class="icons" src="images/timberwolvesicon.png">
+                <div class="front pacersfront">
+                    <h2>Indiana Pacers</h2>
+                    <img class="icons" src="images/pacersicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -110,9 +110,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(8)">
-                <div class="front pelicansfront">
-                    <h2>New Orleans Pelicans</h2>
-                    <img class="icons" src="images/pelicansicon.png">
+                <div class="front heatfront">
+                    <h2>Miami Heat</h2>
+                    <img class="icons" src="images/heaticon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -121,9 +121,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(9)">
-                <div class="front thunderfront">
-                    <h2>Oklahoma City Thunder</h2>
-                    <img class="icons" src="images/okcicon.png">
+                <div class="front bucksfront">
+                    <h2>Milwaukie Bucks</h2>
+                    <img class="icons" src="images/bucksicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -132,9 +132,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(10)">
-                <div class="front sunsfront">
-                    <h2>Phoenix Suns</h2>
-                    <img class="icons" src="images/sunsicon.png">
+                <div class="front knicksfront">
+                    <h2>New York Knicks</h2>
+                    <img class="icons" src="images/knicksicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -143,9 +143,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(11)">
-                <div class="front blazersfront">
-                    <h2>Portland Trailblazers</h2>
-                    <img class="icons" src="images/blazersicon.png">
+                <div class="front magicfront">
+                    <h2>Orlando Magic</h2>
+                    <img class="icons" src="images/magicicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -154,9 +154,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(12)">
-                <div class="front kingsfront">
-                    <h2>Sacramento Kings</h2>
-                    <img class="icons" src="images/kingsicon.png">
+                <div class="front sixersfront">
+                    <h2>Philadelphia 76ers</h2>
+                    <img class="icons" src="images/76ersicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -165,9 +165,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(13)">
-                <div class="front spursfront">
-                    <h2>San Antonio Spurs</h2>
-                    <img class="icons" src="images/spursicon.png">
+                <div class="front raptorsfront">
+                    <h2>Toronto Raptors</h2>
+                    <img class="icons" src="images/raptorsicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
@@ -176,9 +176,9 @@
         </div>
         <div class="cardContainer">
             <div class="card" onclick="flipped(14)">
-                <div class="front jazzfront">
-                    <h2>Utah Jazz</h2>
-                    <img class="icons" src="images/jazzicon.png">
+                <div class="front wizardsfront">
+                    <h2>Washington Wizards</h2>
+                    <img class="icons" src="images/wizardsicon.png">
                 </div>
                 <div class="back">
                     <p>testing</p>
