set up API info

--- a/finalproject/eastern.html
+++ b/finalproject/eastern.html
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
         <div class="cardContainer">
-            <div class="card" onclick="flipped(0)">
+            <div class="card" onclick="flipped(0);teamRequests(91)">
                 <div class="front hawksfront">
                     <h2>Atlanta Hawks</h2>
                     <img class="icons" src="images/hawksicon.png">
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(1)">
+            <div class="card" onclick="flipped(1);teamRequests(82)">
                 <div class="front celticsfront">
                     <h2>Boston Celtics</h2>
                     <img class="icons" src="images/celticsicon.png">
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(2)">
+            <div class="card" onclick="flipped(2);teamRequests(84)">
                 <div class="front netsfront">
                     <h2>Brooklyn Nets</h2>
                     <img class="icons" src="images/nets.png">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(3)">
+            <div class="card" onclick="flipped(3);teamRequests(93)">
                 <div class="front hornetsfront">
                     <h2>Charlotte Hornets</h2>
                     <img class="icons" src="images/hornetsicon.png">
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(4)">
+            <div class="card" onclick="flipped(4);teamRequests(89)">
                 <div class="front bullsfront">
                     <h2>Chicago Bulls</h2>
                     <img class="icons" src="images/bullsicon.png">
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(5)">
+            <div class="card" onclick="flipped(5);teamRequests(86)">
                 <div class="front cavsfront">
                     <h2>Cleveland Cavaliers</h2>
                     <img class="icons" src="images/cavsicon.png">
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(6)">
+            <div class="card" onclick="flipped(6);teamRequests(88)">
                 <div class="front pistonsfront">
                     <h2>Detroit Pistons</h2>
                     <img class="icons" src="images/pistonsicon.png">
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(7)">
+            <div class="card" onclick="flipped(7);teamRequests(87)">
                 <div class="front pacersfront">
                     <h2>Indiana Pacers</h2>
                     <img class="icons" src="images/pacersicon.png">
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(8)">
+            <div class="card" onclick="flipped(8);teamRequests(92)">
                 <div class="front heatfront">
                     <h2>Miami Heat</h2>
                     <img class="icons" src="images/heaticon.png">
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(9)">
+            <div class="card" onclick="flipped(9);teamRequests(90)">
                 <div class="front bucksfront">
                     <h2>Milwaukie Bucks</h2>
                     <img class="icons" src="images/bucksicon.png">
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(10)">
+            <div class="card" onclick="flipped(10);teamRequests(83)">
                 <div class="front knicksfront">
                     <h2>New York Knicks</h2>
                     <img class="icons" src="images/knicksicon.png">
@@ -142,7 +142,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(11)">
+            <div class="card" onclick="flipped(11);teamRequests(95)">
                 <div class="front magicfront">
                     <h2>Orlando Magic</h2>
                     <img class="icons" src="images/magicicon.png">
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(12)">
+            <div class="card" onclick="flipped(12);teamRequests(85)">
                 <div class="front sixersfront">
                     <h2>Philadelphia 76ers</h2>
                     <img class="icons" src="images/76ersicon.png">
@@ -164,7 +164,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(13)">
+            <div class="card" onclick="flipped(13);teamRequests(81)">
                 <div class="front raptorsfront">
                     <h2>Toronto Raptors</h2>
                     <img class="icons" src="images/raptorsicon.png">
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card" onclick="flipped(14)">
+            <div class="card" onclick="flipped(14);teamRequests(94)">
                 <div class="front wizardsfront">
                     <h2>Washington Wizards</h2>
                     <img class="icons" src="images/wizardsicon.png">
@@ -188,6 +188,7 @@
     </div>
     </div>
     <script src="scripts/flipped.js"></script>
+    <script src="scripts/basketballdata.js"></script>
 </body>
 
 </html>
