--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -8,7 +8,8 @@
     <title>Team Selection</title>
     <meta name="team selection page" content="Select a team to see their stats">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker%7cMarkazi+Text%7cOverpass:900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker%7cMarkazi+Text%7cOverpass:900i"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -18,59 +19,15 @@
     </div>
     <div class="container">
         <div class="west">
-            <!-- <button class="teams">Western</button> -->
             <a href="western.html">
                 <h1>Western Conference</h1>
             </a>
-            <!--              <input type="text" id="westInput" onkeyup="searching()" placeholder="Search">
-                <div class="teams">
-                <a href="#">Dallas Mavericks</a>
-                <a href="#">Denver Nuggets</a>
-                <a href="#">Golden State Warriors</a>
-                <a href="#">Houston Rockets</a>
-                <a href="#">Los Angeles Clippers</a>
-                <a href="#">Lost Angeles Lakers</a>
-                <a href="#">Memphis Grizzlies</a>
-                <a href="#">Minnesota Timberwolves</a>
-                <a href="#">New Orleans Pelicans</a>
-                <a href="#">Oklahoma City Thunder</a>
-                <a href="#">Phoenix Suns</a>
-                <a href="#">Portland Trial Blazers</a>
-                <a href="#">Sacramento Kings</a>
-                <a href="#">San Antonio Spurs</a>
-                <a href="#">Utah Jazz</a> -->
-
         </div>
-
-       
-            <div class="east">
-        
-        <!-- <button class="teams">Eastern</button> -->
-        <a href="eastern.html">
-        <h1>Eastern Conference</h1>
-    </a>
-        <!--  <a href="#">Atlanta Hawks</a>
-                <a href="#">Boston Celtics</a>
-                <a href="#">Brooklyn Nets</a>
-                <a href="#">Charlotte Hornets</a>
-                <a href="#">Chicago Bulls</a>
-                <a href="#">Cleveland Cavaliers</a>
-                <a href="#">Detroit Pistons</a>
-                <a href="#">Indiana Pacers</a>
-                <a href="#">Miami Heat</a>
-                <a href="#">Milwaukee Bucks</a>
-                <a href="#">New York Knicks</a>
-                <a href="#">Orlando Magic</a>
-                <a href="#">Philadelphia 76ers</a>
-                <a href="#">Toronto Raptors</a>
-                <a href="#">Washington Wizards</a> -->
-
-
-        <!-- <div class="test">
-                <button onclick="testingAPI()">Tester</button>
-            </div> -->
-    </div>
-
+        <div class="east">
+            <a href="eastern.html">
+                <h1>Eastern Conference</h1>
+            </a>
+        </div>
     </div>
     <script src="scripts/collapsable.js"></script>
     <script src="scripts/searching.js"></script>
